2003-08-12  Al Riddoch  <alriddoch@zepler.org>

	* Update to use wfmath 0.3 for compatability with eris 1.2.
	  We are now clear to use Mersenne Twister from wfmath.

2003-08-11  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Buffer.cpp, Mercator/Buffer.h, Mercator/Buffer_impl.h:
	  Convert to template so that buffer data can be an array of any
	  type.

	* Mercator/Surface.cpp, Mercator/Surface.h: Specialise Buffer as
	  unsigned bytes. Much more compact than floats.

	* Mercator/ThresholdShader.cpp, Mercator/GrassShader.h,
	  Mercator/GrassShader.cpp, Mercator/FillShader.cpp,
	  Mercator/DepthShader.cpp: Re-write shaders to be largely
	  buffer type independant.

2003-08-09  Damien McGinnes

	* Mercator/Segment.cpp, Mercator/MersenneTwister.h, configure,in: 
	  put MersenneTwister in Mercator until clients are ready to move
 	  across to wfmath-0.3 	

2003-08-09  Damien McGinnes

	* Mercator/Segment.cpp: use a local random number generator to
	  ensure the rng state cant be affected by other use of rand() in
	  an app. Change the RNG code to utilise the MersenneTwister.
	* configure.in: require wfmath 0.3 for the MersenneTwister RNG.
	* Mercator/BasePoint.h: seed() now returns an unsigned int.
	* this RNG gives a 20% spped increase on optimized (-O2) code 
	  compared with rand(). (unoptimized it's roughly the same)

          generate 400 tiles (height only, res 64)
          std rand = 1.75 seconds = 4.4 ms per tile
          mt rand = 1.41 seconds = 3.5 ms per tile

2003-08-08  Damien McGinnes

	* Mercator/Segment.cpp: changed round() to rint()
	* updated TODO

2003-08-06  Al Riddoch  <alriddoch@zepler.org>

	* Removed depency on Atlas-C++ for now.

2003-08-06  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Segment.h, Mercator/Segment.cpp: Add vertex cache
	  pointer to segment. Vertex buffer is handled by client.

2003-07-31  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/TerrainMod.h, Mercator/TerrainMod_impl.h,